@@ -3,6 +3,7 @@ $Id$
 2.0.14-pre-1
 	Fixed missing word in startup message
 	Better 'status' command
+	Use '+' for popwin corners when 'fancylines' is off
 	
 2.0.13
 	Changed startup message for new mailing list
